# ghostty-blackhole-main

./: .gitignore  CMakeLists.txt  README.md  blackhole_debug.txt  blackhole_presets.txt  build_blackhole.ps1  build_ui.ps1  debug_state.md  render_stderr.txt  resource.rc  sync_to_software.ps1  watchdog.ps1
Blakhole_UI/: .gitignore  CMakeLists.txt  Main.qml  app.rc  main.cpp
Blakhole_UI/components/: EDropDown.qml
Blakhole_UI/core/: blackholecore.cpp  blackholecore.h  blackholepreviewfbo.cpp  blackholepreviewfbo.h  systemtray.cpp  systemtray.h
build_qt/: .ninja_deps  .ninja_log  BlackHole.exe.manifest  CMakeCache.txt  build.ninja  cmake_install.cmake
build_qt/.qt/: .qmlls.build.ini  .qmlls.build.ini.part  BlackHole_qml.cmake  BlackHole_res.cmake  QtDeploySupport.cmake  QtDeployTargets.cmake
build_qt/.qt/deploy_qml_imports/: BlackHole.cmake
build_qt/.qt/qml_imports/: BlackHole_build.cmake  BlackHole_build.rsp  BlackHole_conf.rsp
build_qt/.qt/rcc/: BlackHole_raw_qml_0.qrc  qmake_BlakholeUI.qrc  (+4 more)
build_qt/BlackHole_autogen/: deps  moc_predefs.h
build_qt/BlakholeUI/: BlackHole_qml_module_dir_map.qrc  Main.qml  qmldir
build_qt/meta_types/: BlackHole_json_file_list.txt  BlackHole_json_file_list.txt.timestamp  qt6blackhole_metatypes.json.gen
build_qt/qmltypes/: BlackHole_foreign_types.txt
release/: blackhole_presets.txt
release/shaders/: frag_desktop_header.glsl
shaders/: blackhole.hlsl  frag_desktop_header.glsl
src/: capture_dxgi.cpp  capture_wgc.cpp  capture_wgc.h  d3d11_renderer.cpp  d3d11_renderer.h  gl_texture.cpp  gl_texture.h  gui_config.cpp  gui_config.h  main.cpp  win32_gl.cpp  win32_gl.h
(+58 files in other folders)
